--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.landing-hero-section {
+  background-image: url("@/assets/images/hero.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
